--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,19 +80,17 @@ jobs:
     # store success output flag for ci job
     steps:
       - id: setoutput
-        run: echo "SUCCESS=true" >> $GITHUB_ENV
+        run: echo "TESTS_SUCCESS=true" >> $GITHUB_ENV
   ci-tests:
     runs-on: ubuntu-latest
     if: always() # always run, so we never skip the check
     needs: [run-unit-tests, run-e2e-tests, after-tests]
-    env:
-      AFTER_TESTS: ${{ env.SUCCESS }}
     steps:
       # pass step only when output of previous after-shards job is set
       # in case at least one of the shard fails, after-shards is skipped
       # and the output will not be set, which will then cause the ci job to fail
       - run: |
-          if [[ $AFTER_TESTS == "true" ]]; then
+          if [[ ${{ env.TESTS_SUCCESS }} == "true" ]]; then
             echo "Tests passed"
             exit 0
           else
