--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,16 +79,16 @@ jobs:
     if: success() # only run when all tests have passed
     # store success output flag for ci job
     outputs:
-      TEST_SUCCESS: ${{ steps.check-success.outputs.SUCCESS }}
+      AFTER_TESTS_SUCCESS: ${{ steps.set-success.outputs.SUCCESS }}
     steps:
-      - id: check_success
+      - id: set-success
         run: echo "SUCCESS=true" >> $GITHUB_OUTPUT
   ci-tests:
     runs-on: ubuntu-latest
     if: always() # always run, so we never skip the check
-    needs: [run-unit-tests, run-e2e-tests, after-tests]
+    needs: [after-tests]
     env:
-      TESTS_SUCCESS: ${{ needs.after-tests.outputs.TEST_SUCCESS }}
+      TESTS_SUCCESS: ${{ needs.after-tests.outputs.AFTER_TESTS_SUCCESS }}
     steps:
       # pass step only when output of previous after-shards job is set
       # in case at least one of the shard fails, after-shards is skipped
